<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="45sp"
            android:layout_marginBottom="35sp"
            android:text="@string/forget_password_"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/et_forget_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/please_input_user_name"
            android:inputType="text"
            android:maxLength="10"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/telephone_num" />

        <EditText
            android:id="@+id/et_forget_telephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/please_input_telephone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/verify_code" />

        <EditText
            android:id="@+id/et_forget_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="20sp"
            android:hint="@string/please_input_verify_code"
            android:inputType="text"
            android:maxLength="6"
            android:minHeight="48dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp">

            <Button
                android:id="@+id/btn_forget_send_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="#578bf3"
                android:text="@string/get_verify_code"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_forget_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="#578bf3"
                android:text="@string/next_step"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
