<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginTop="45sp"
            android:layout_marginBottom="35sp"
            android:text="@string/verify_identity"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/teacher_num" />

        <EditText
            android:id="@+id/et_register_teacher_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="12.5sp"
            android:hint="@string/please_input_teacher_num"
            android:inputType="text"
            android:maxLength="10"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="12.5sp"
            android:hint="@string/please_input_name"
            android:inputType="text"
            android:maxLength="10"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:text="@string/affiliated_department" />

        <Spinner
            android:id="@+id/sp_register_department"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="40sp"
            android:layout_marginBottom="12.5sp"
            android:minHeight="48dp"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/btn_register_next_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:background="#578bf3"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
