<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45sp"
            android:layout_marginTop="30sp"
            android:text="@string/new_telephone_num"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_new_telephone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="25sp"
            android:hint="@string/please_input_telephone_num"
            android:inputType="phone"
            android:maxLength="11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:layout_marginTop="10sp"
            android:text="@string/verify_code"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="25sp"
            android:hint="@string/please_input_verify_code"
            android:inputType="phone"
            android:maxLength="6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="40sp">

            <Button
                android:id="@+id/btn_get_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="#578bf3"
                android:text="@string/get_verify_code"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_finish_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#578bf3"
                android:text="@string/finish_modify"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
