<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/personal_signature"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_personal_sign"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:hint="@string/please_input_personal_signature"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sign_finish_modify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="20sp"
            android:background="@drawable/rounded_rect_blue"
            android:text="@string/finish_modify"
            android:textColor="#e94eb4dc"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
